# camctl_rs

./: Cargo.toml  README.md
src/: cam.rs  lib.rs
tests/: fan.rs  pump.rs  status.rs
